fix: layout overflow

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -33,6 +33,7 @@ button {
   flex: auto;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 main {
